--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo-google-fonts/dev": "^0.2.3",
+    "@expo-google-fonts/montserrat": "^0.2.3",
+    "expo-font": "^11.10.3",
     "react": "18.2.0",
-    "react-native": "0.73.7"
+    "react-native": "0.73.7",
+    "react-native-google-fonts": "^0.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
